--- a/interactive-rating-component-main/style.css
+++ b/interactive-rating-component-main/style.css
@@ -5,18 +5,11 @@ body {
 }
 main {
   width: 350px;
-  padding: 40px;
+  padding: 30px;
   background-color: #1e252f;
   border-radius: 30px;
   margin: auto;
   margin-top: 10%;
-}
-.grades {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin: auto;
-  margin: 30px 0;
 }
 .circle {
   align-content: center;
@@ -31,18 +24,40 @@ div.circle {
   background-image: url("images/icon-star.svg");
   background-position: center;
   background-repeat: no-repeat;
+  margin-bottom: 30px;
 }
 p {
   color: #9199a4;
 }
-#btn {
+.grades {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: auto;
+  margin: 25px 0;
+}
+button.circle:hover {
+  cursor: pointer;
+  background-color: hsl(25, 97%, 53%);
+  color: #1e252f;
+}
+button:focus,
+#submit:active,
+#submit:hover {
+  cursor: pointer;
+  background-color: white;
+  color: #1e252f;
+}
+#submit {
   width: 100%;
-  height: 50px;
+  height: 40px;
   border: none;
   border-radius: 50px;
   font-family: Overpass;
+  font-weight: 500;
   background-color: hsl(25, 97%, 53%);
-  color: #000;
+  color: #1e252f;
   text-transform: uppercase;
   font-size: 16px;
+  letter-spacing: 2px;
 }
